@@ -1,4 +1,6 @@
 ﻿------------------------CVS after 3.00 beta 6----------------
+NEW FEATURE:  Added assist tick toggle to editor.
+NEW FEATURE:  Added editing of text fields to editor.
 CHANGE:  Improved the appearance of hidden/sudden.
 CHANGE:  After changing sort to "BEST", focus will be changed to the 
 	the most-played song.
